--- a/public_html/index.html
+++ b/public_html/index.html
@@ -55,14 +55,14 @@
   	  </div>
   	  <div class="col-sm-6 mt-3">
   		<h1 class="border-bottom">年次報告会について</h1>
-  		<p>産学間連携推進室では、毎年２月〜３月に年次報告会を実施しています。</p>
-  		<p>2021年度は以下の通り実施いたします。なお、本報告会はどなたでも自由に拝聴いただけます。お気軽にお越しください。</p>
-  		<h3>2021年度年次報告会開催概要</h3>
+  		<p>産学間連携推進室では、毎年2月〜6月に年次報告会を実施しています。</p>
+  		<p>2022年度は以下の通り実施いたしました。</p>
+  		<h3>2022年度年次報告会開催概要</h3>
   		<dl>
   		  <dt>日時</dt>
-  		  <dd>2021年6月21日（月）18時半〜</dd>
+  		  <dd>2022年6月3日（土）12時〜16時</dd>
   		  <dt>場所</dt>
-  		  <dd>Microsoft Teams上（オンライン）</dd>
+  		  <dd>工学系B棟3B210・Microsoft Teams上（オンライン）</dd>
   		</dl>
   	  </div>
   	</div>
