--- a/public_html/members.html
+++ b/public_html/members.html
@@ -41,8 +41,11 @@
 	  <h1 class="border-bottom">所属メンバー</h1>
 	  <ul class="nav nav-tabs" id="MemberTab" role="tablist">
 	    <li class="nav-item">
-          <a class="nav-link active" id="m2023-tab" data-toggle="tab" href="#m2023" role="tab" aria-controls="m2023" aria-selected="true">2023年度</a>
-        </li>
+        <a class="nav-link active" id="m2024-tab" data-toggle="tab" href="#m2024" role="tab" aria-controls="m2024" aria-selected="true">2024年度</a>
+      </li>
+	    <li class="nav-item">
+        <a class="nav-link active" id="m2023-tab" data-toggle="tab" href="#m2023" role="tab" aria-controls="m2023" aria-selected="true">2023年度</a>
+      </li>
 	    <li class="nav-item">
           <a class="nav-link" id="m2022-tab" data-toggle="tab" href="#m2022" role="tab" aria-controls="m2022" aria-selected="true">2022年度</a>
         </li>
@@ -72,6 +75,26 @@
 		</li>
 	  </ul>
 	  <div class="tab-content" id="MemberTabContent">
+        <div class="tab-pane fade show active" id="m2024" role="tabpanel" aria-labelledby="m2023-tab">
+						<dl class="mt-3">
+						<dt>根本 晃輔</dt>
+						<dd>所属：大学院 システム情報工学研究科 博士後期課程</dd>
+						<dt>関口 亞聖</dt>
+						<dd>所属：大学院 システム情報工学研究科 情報理工学位プログラム 博士前期課程</dd>
+						<dt>太田 弘樹</dt>
+						<dd>所属：大学院 システム情報工学研究群 情報理工学位プログラム 博士前期課程</dd>
+						<dt>服部 真吾</dt>
+						<dd>所属：情報メディア創成学類</dd>
+						<dt>金子 尚樹</dt>
+						<dd>所属：情報科学類 ※2024年度室長</dd>
+						<dt>松田心杏</dt>
+						<dd>所属：情報科学類</dd>
+						<dt>中野あおい</dt>
+						<dd>所属：情報科学類</dd>
+						<dt>細島涼雅</dt>
+						<dd>所属：情報科学類</dd>
+					</dl>
+				</div>
         <div class="tab-pane fade show active" id="m2023" role="tabpanel" aria-labelledby="m2023-tab">
 	  <dl class="mt-3">
 		<dt>根本 晃輔</dt>
