トップページ更新

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -45,6 +45,10 @@
   	  <div class="col-sm-6 mt-3">
   		<h1 class="border-bottom">お知らせ</h1>
   		<div class="row">
+  		  <div class="col-sm-4">2024年5月20日</div>
+  		  <div class="col-sm-8">メンバーの情報を2024年度のものに更新しました。また、成果報告会について更新しました。</div>
+  		</div>
+  		<div class="row">
   		  <div class="col-sm-4">2022年4月18日</div>
   		  <div class="col-sm-8">メンバーの情報を2022年度のものに更新しました。</div>
   		</div>
@@ -56,13 +60,13 @@
   	  <div class="col-sm-6 mt-3">
   		<h1 class="border-bottom">年次報告会について</h1>
   		<p>産学間連携推進室では、毎年2月〜6月に年次報告会を実施しています。</p>
-  		<p>2022年度は以下の通り実施いたしました。</p>
-  		<h3>2022年度年次報告会開催概要</h3>
+  		<p>2024年度は以下の通り実施いたします。</p>
+  		<h3>2024年度年次報告会開催概要</h3>
   		<dl>
   		  <dt>日時</dt>
-  		  <dd>2022年6月3日（土）12時〜16時</dd>
+  		  <dd>2024年5月26日（土）13時〜17時</dd>
   		  <dt>場所</dt>
-  		  <dd>工学系B棟3B210・Microsoft Teams上（オンライン）</dd>
+  		  <dd>第三エリアA棟3A202</dd>
   		</dl>
   	  </div>
   	</div>
