プロジェクトの更新

--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -60,12 +60,12 @@
       </ul>
       <h4>学生活動プロジェクト</h4>
       <ul>
-        <li>航空機管制の自動化シミュレーションとその応用による展望</li>
-        <li>ネットワーク内における故障検知の実現に向けた研究開発</li>
-        <li>自動運転を活用した増・解結による列車の運行効率化について</li>
-        <li>Wi-Fiを利用した混雑状況の把握</li>
-        <li>機械学習を用いた声の識別</li>
-        <li>教育用自作OSの開発</li>
+				<li>遠隔で高度なプログラミング教育を可能にする環境の開発</li>
+				<li>画像解析による地球の軌道要素の導出</li>
+				<li>法律文書の自動解析</li>
+				<li>Bluetooth Low Energyビーコンを用いたモーショントラッカーの開発</li>
+				<li>人為的ミス・いたずらの削減を主眼に置いた飲食店におけるオープンな注文システムの開発</li>
+				<li>子音情報のみを用いたVR向けのかな文字入力手法の提案</li>
       </ul>
 	  <!-- InstanceEndEditable -->
 	</div>
