--- a/public_html/news.html
+++ b/public_html/news.html
@@ -40,7 +40,9 @@
 			<a class="nav-item nav-link" href="about.html">弊室について</a>
 		</nav>
 		<h1 class="border-bottom">お知らせ</h1>
-		<p>現在お知らせはありません。</p>
+		<ul>
+			<li>2023年度の成果報告書を公開しました：<a href="file/成果報告書2023.pdf">成果報告書2023.pdf</li>
+		</ul>
 	<!-- InstanceEndEditable -->
 	</div>
 	<footer class="border-top text-center mt-5 pt-5">
