--- a/public_html/members.html
+++ b/public_html/members.html
@@ -44,7 +44,7 @@
         <a class="nav-link active" id="m2024-tab" data-toggle="tab" href="#m2024" role="tab" aria-controls="m2024" aria-selected="true">2024年度</a>
       </li>
 	    <li class="nav-item">
-        <a class="nav-link active" id="m2023-tab" data-toggle="tab" href="#m2023" role="tab" aria-controls="m2023" aria-selected="true">2023年度</a>
+        <a class="nav-link" id="m2023-tab" data-toggle="tab" href="#m2023" role="tab" aria-controls="m2023" aria-selected="true">2023年度</a>
       </li>
 	    <li class="nav-item">
           <a class="nav-link" id="m2022-tab" data-toggle="tab" href="#m2022" role="tab" aria-controls="m2022" aria-selected="true">2022年度</a>
