--- a/public_html/members.html
+++ b/public_html/members.html
@@ -95,7 +95,7 @@
 						<dd>所属：情報科学類</dd>
 					</dl>
 				</div>
-        <div class="tab-pane fade show active" id="m2023" role="tabpanel" aria-labelledby="m2023-tab">
+        <div class="tab-pane fade show" id="m2023" role="tabpanel" aria-labelledby="m2023-tab">
 	  <dl class="mt-3">
 		<dt>根本 晃輔</dt>
 		<dd>所属：大学院 システム情報工学研究科 博士後期課程</dd>
