--- a/public_html/index.html
+++ b/public_html/index.html
@@ -45,6 +45,10 @@
   	  <div class="col-sm-6 mt-3">
   		<h1 class="border-bottom">お知らせ</h1>
   		<div class="row">
+  		  <div class="col-sm-4">2024年5月25日</div>
+  		  <div class="col-sm-8">成果報告書を公開しました。</div>
+  		</div>
+  		<div class="row">
   		  <div class="col-sm-4">2024年5月20日</div>
   		  <div class="col-sm-8">メンバーの情報を2024年度のものに更新しました。また、成果報告会について更新しました。</div>
   		</div>
