--- a/public_html/news.html
+++ b/public_html/news.html
@@ -41,8 +41,8 @@
 		</nav>
 		<h1 class="border-bottom">お知らせ</h1>
 		<ul>
-			<li>2022年度の成果報告書を公開しました：<a href="file/成果報告書20230603.pdf">成果報告書20230603.pdf</li>
-			<li>2023年度の成果報告書を公開しました：<a href="file/成果報告書20240526.pdf">成果報告書20240526.pdf</li>
+			<li>2022年度の成果報告書を公開しました：<a href="file/成果報告書20230603.pdf">成果報告書20230603.pdf</a></li>
+			<li>2023年度の成果報告書を公開しました：<a href="file/成果報告書20240526.pdf">成果報告書20240526.pdf</a></li>
 		</ul>
 	<!-- InstanceEndEditable -->
 	</div>
