--- a/public_html/index.html
+++ b/public_html/index.html
@@ -46,7 +46,7 @@
   		<h1 class="border-bottom">お知らせ</h1>
   		<div class="row">
   		  <div class="col-sm-4">2024年5月25日</div>
-  		  <div class="col-sm-8">成果報告書を公開しました。</div>
+  		  <div class="col-sm-8">新しい成果報告書を公開しました。詳しくは<a href="news.html">お知らせ</a>をご覧ください。</div>
   		</div>
   		<div class="row">
   		  <div class="col-sm-4">2024年5月20日</div>
