--- a/public_html/members.html
+++ b/public_html/members.html
@@ -78,21 +78,21 @@
         <div class="tab-pane fade show active" id="m2024" role="tabpanel" aria-labelledby="m2024-tab">
 						<dl class="mt-3">
 						<dt>根本 晃輔</dt>
-						<dd>所属：大学院 システム情報工学研究科 博士後期課程</dd>
+						<dd>所属：大学院 システム情報工学研究科 コンピュータサイエンス専攻 博士後期課程</dd>
 						<dt>関口 亞聖</dt>
 						<dd>所属：大学院 システム情報工学研究科 情報理工学位プログラム 博士前期課程</dd>
 						<dt>太田 弘樹</dt>
 						<dd>所属：大学院 システム情報工学研究群 情報理工学位プログラム 博士前期課程</dd>
 						<dt>服部 真吾</dt>
-						<dd>所属：情報メディア創成学類</dd>
+						<dd>所属：情報学群 情報メディア創成学類</dd>
 						<dt>金子 尚樹</dt>
-						<dd>所属：情報科学類 ※2024年度室長</dd>
-						<dt>松田心杏</dt>
-						<dd>所属：情報科学類</dd>
-						<dt>中野あおい</dt>
-						<dd>所属：情報科学類</dd>
-						<dt>細島涼雅</dt>
-						<dd>所属：情報科学類</dd>
+						<dd>所属：情報学群 情報科学類 ※2024年度室長</dd>
+						<dt>松田 心杏</dt>
+						<dd>所属：理工学群 物理学類</dd>
+						<dt>中野 あおい</dt>
+						<dd>所属：情報学群 情報科学類</dd>
+						<dt>細島 涼雅</dt>
+						<dd>所属：情報学群 情報科学類</dd>
 					</dl>
 				</div>
         <div class="tab-pane fade show" id="m2023" role="tabpanel" aria-labelledby="m2023-tab">
