--- a/public_html/about.html
+++ b/public_html/about.html
@@ -48,7 +48,7 @@
 			<dt>所在地</dt>
 			<dd>茨城県つくば市天王台１−１−１　筑波大学第3エリア　工学系F棟　3F230室</dd>
 			<dt>連絡先</dt>
-			<dd>info[at]ac-room.org</dd>
+			<dd>s2212117[at]u.tsukuba.ac.jp</dd>
 		</dl>
 		
 	<!-- InstanceEndEditable -->
