新室長就任

--- a/public_html/members.html
+++ b/public_html/members.html
@@ -92,7 +92,7 @@
 						<dt>中野 あおい</dt>
 						<dd>所属：情報学群 情報科学類</dd>
 						<dt>細島 涼雅</dt>
-						<dd>所属：情報学群 情報科学類</dd>
+						<dd>所属：情報学群 情報科学類 ※2025年室長</dd>
 					</dl>
 				</div>
         <div class="tab-pane fade show" id="m2023" role="tabpanel" aria-labelledby="m2023-tab">
