--- a/public_html/index.html
+++ b/public_html/index.html
@@ -34,6 +34,7 @@
   	  <a class="nav-item nav-link active" href="index.html">トップ</a>
   	  <a class="nav-item nav-link" href="members.html">メンバー</a>
   	  <a class="nav-item nav-link" href="news.html">お知らせ</a>
+  	  <a class="nav-item nav-link" href="publication.html">成果報告</a>
   	  <a class="nav-item nav-link" href="projects.html">プロジェクト</a>
   	  <a class="nav-item nav-link" href="about.html">弊室について</a>
   	</nav>
