--- a/public_html/publication.html
+++ b/public_html/publication.html
@@ -35,23 +35,28 @@
 		<nav class="nav nav-pills nav-fill mb-4">
 			<a class="nav-item nav-link" href="index.html">トップ</a>
 			<a class="nav-item nav-link" href="members.html">メンバー</a>
-			<a class="nav-item nav-link" href="news.html">お知らせ</a>
+			<a class="nav-item nav-link active" href="news.html">お知らせ</a>
   	  <a class="nav-item nav-link" href="publication.html">成果報告</a>
 			<a class="nav-item nav-link" href="projects.html">プロジェクト</a>
-			<a class="nav-item nav-link active" href="about.html">弊室について</a>
+			<a class="nav-item nav-link" href="about.html">弊室について</a>
 		</nav>
-		<h1 class="border-bottom">弊室について</h1>
-		<dl>
-			<dt>正式名称</dt>
-			<dd>筑波大学 情報学群 情報科学類 産学間連携推進室</dd>
-			<dt>正式名称（英語）</dt>
-			<dd>Academic Collaboration Promotional Laboratory</dd>
-			<dt>所在地</dt>
-			<dd>茨城県つくば市天王台１−１−１　筑波大学第3エリア　工学系F棟　3F230室</dd>
-			<dt>連絡先</dt>
-			<dd>s2311951[at]u.tsukuba.ac.jp</dd>
-		</dl>
-		
+		<h1 class="border-bottom">成果報告</h1>
+    <h2 >2024年度</h2>
+    <p>2024年度の成果報告会を2025年4月13日に筑波大学3A棟の3A202で開催しました。</p>
+    <div>
+      <img src="file/2024_timetable.JPG"  width="70%" alt="2024年度成果報告会のタイムテーブル"/>
+    </div>
+    <!-- <p>成果報告書：<a href="file/成果報告書20250413.pdf">成果報告書20250413.pdf</a></p> -->
+    <h2 >2023年度</h2>
+    <p>2023年度の成果報告会を2024年5月26日に筑波大学3A棟の3A202で開催しました。</p>
+    <div>
+      <img src="file/2023_timetable1.JPG" width="45%" alt="2023年度成果報告会のタイムテーブルその1"/>
+      <img src="file/2023_timetable2.JPG" width="45%" alt="2023年度成果報告会のタイムテーブルその2"/>
+    </div>
+    <p>成果報告書：<a href="file/成果報告書20240526.pdf">成果報告書20240526.pdf</a></p>
+    <h2 >2022年度</h2>
+    <p>2022年度の成果報告会を2023年6月3日に筑波大学3B棟の3A202で開催しました。</p>
+    <p>成果報告書：<a href="file/成果報告書20230603.pdf">成果報告書20230603.pdf</a></p>
 	<!-- InstanceEndEditable -->
 	</div>
 	<footer class="border-top text-center mt-5 pt-5">
