--- a/public_html/index.html
+++ b/public_html/index.html
@@ -46,6 +46,10 @@
   	  <div class="col-sm-6 mt-3">
   		<h1 class="border-bottom">お知らせ</h1>
   		<div class="row">
+  		  <div class="col-sm-4">2025年4月13日</div>
+  		  <div class="col-sm-8">新しい成果報告書と成果報告会について公開しました。詳しくは<a href="publication.html">成果報告</a></div>
+  		</div>
+  		<div class="row">
   		  <div class="col-sm-4">2024年5月25日</div>
   		  <div class="col-sm-8">新しい成果報告書を公開しました。詳しくは<a href="news.html">お知らせ</a>をご覧ください。</div>
   		</div>
