--- a/public_html/news.html
+++ b/public_html/news.html
@@ -42,6 +42,7 @@
 		</nav>
 		<h1 class="border-bottom">お知らせ</h1>
 		<ul>
+			<li>成果報告会等のページを作成しました：<a href="publication.html">成果報告</a></li>
 			<li>2022年度の成果報告書を公開しました：<a href="file/成果報告書20230603.pdf">成果報告書20230603.pdf</a></li>
 			<li>2023年度の成果報告書を公開しました：<a href="file/成果報告書20240526.pdf">成果報告書20240526.pdf</a></li>
 		</ul>
