--- a/public_html/publication.html
+++ b/public_html/publication.html
@@ -46,7 +46,7 @@
     <div>
       <img src="file/2024_timetable.JPG"  width="70%" alt="2024年度成果報告会のタイムテーブル"/>
     </div>
-    <!-- <p>成果報告書：<a href="file/成果報告書20250413.pdf">成果報告書20250413.pdf</a></p> -->
+    <p>成果報告書：<a href="file/成果報告書20250413.pdf">成果報告書20250413.pdf</a></p>
     <h2 >2023年度</h2>
     <p>2023年度の成果報告会を2024年5月26日に筑波大学3A棟の3A202で開催しました。</p>
     <div>
