--- a/public_html/publication.html
+++ b/public_html/publication.html
@@ -44,14 +44,14 @@
     <h2 >2024年度</h2>
     <p>2024年度の成果報告会を2025年4月13日に筑波大学3A棟の3A202で開催しました。</p>
     <div>
-      <img src="file/2024_timetable.JPG"  width="70%" alt="2024年度成果報告会のタイムテーブル"/>
+      <img src="/file/2024_timetable.JPG"  width="70%" alt="2024年度成果報告会のタイムテーブル"/>
     </div>
     <p>成果報告書：<a href="file/成果報告書20250413.pdf">成果報告書20250413.pdf</a></p>
     <h2 >2023年度</h2>
     <p>2023年度の成果報告会を2024年5月26日に筑波大学3A棟の3A202で開催しました。</p>
     <div>
-      <img src="file/2023_timetable1.JPG" width="45%" alt="2023年度成果報告会のタイムテーブルその1"/>
-      <img src="file/2023_timetable2.JPG" width="45%" alt="2023年度成果報告会のタイムテーブルその2"/>
+      <img src="/file/2023_timetable1.JPG" width="45%" alt="2023年度成果報告会のタイムテーブルその1"/>
+      <img src="/file/2023_timetable2.JPG" width="45%" alt="2023年度成果報告会のタイムテーブルその2"/>
     </div>
     <p>成果報告書：<a href="file/成果報告書20240526.pdf">成果報告書20240526.pdf</a></p>
     <h2 >2022年度</h2>
