--- a/public_html/publication.html
+++ b/public_html/publication.html
@@ -35,8 +35,8 @@
 		<nav class="nav nav-pills nav-fill mb-4">
 			<a class="nav-item nav-link" href="index.html">トップ</a>
 			<a class="nav-item nav-link" href="members.html">メンバー</a>
-			<a class="nav-item nav-link active" href="news.html">お知らせ</a>
-  	  <a class="nav-item nav-link" href="publication.html">成果報告</a>
+			<a class="nav-item nav-link" href="news.html">お知らせ</a>
+  	  <a class="nav-item nav-link active" href="publication.html">成果報告</a>
 			<a class="nav-item nav-link" href="projects.html">プロジェクト</a>
 			<a class="nav-item nav-link" href="about.html">弊室について</a>
 		</nav>
