--- a/public_html/members.html
+++ b/public_html/members.html
@@ -42,7 +42,10 @@
 	  <h1 class="border-bottom">所属メンバー</h1>
 	  <ul class="nav nav-tabs" id="MemberTab" role="tablist">
 	    <li class="nav-item">
-        <a class="nav-link active" id="m2024-tab" data-toggle="tab" href="#m2024" role="tab" aria-controls="m2024" aria-selected="true">2024年度</a>
+        <a class="nav-link active" id="m2025-tab" data-toggle="tab" href="#m2025" role="tab" aria-controls="m2025" aria-selected="true">2025年度</a>
+      </li>
+	    <li class="nav-item">
+        <a class="nav-link" id="m2024-tab" data-toggle="tab" href="#m2024" role="tab" aria-controls="m2024" aria-selected="true">2024年度</a>
       </li>
 	    <li class="nav-item">
         <a class="nav-link" id="m2023-tab" data-toggle="tab" href="#m2023" role="tab" aria-controls="m2023" aria-selected="true">2023年度</a>
@@ -76,54 +79,76 @@
 		</li>
 	  </ul>
 	  <div class="tab-content" id="MemberTabContent">
-        <div class="tab-pane fade show active" id="m2024" role="tabpanel" aria-labelledby="m2024-tab">
-						<dl class="mt-3">
-						<dt>根本 晃輔</dt>
-						<dd>所属：大学院 システム情報工学研究科 コンピュータサイエンス専攻 博士後期課程</dd>
-						<dt>関口 亞聖</dt>
-						<dd>所属：大学院 システム情報工学研究科 情報理工学位プログラム 博士前期課程</dd>
-						<dt>太田 弘樹</dt>
-						<dd>所属：大学院 システム情報工学研究群 情報理工学位プログラム 博士前期課程</dd>
-						<dt>服部 真吾</dt>
-						<dd>所属：情報学群 情報メディア創成学類</dd>
-						<dt>北野 尚樹（旧姓：金子）</dt>
-						<dd>所属：情報学群 情報科学類 ※2024年度室長</dd>
-						<dt>松田 心杏</dt>
-						<dd>所属：理工学群 物理学類</dd>
-						<dt>中野 あおい</dt>
-						<dd>所属：情報学群 情報科学類</dd>
-						<dt>細島 涼雅</dt>
-						<dd>所属：情報学群 情報科学類 ※2025年室長</dd>
-					</dl>
-				</div>
-        <div class="tab-pane fade show" id="m2023" role="tabpanel" aria-labelledby="m2023-tab">
-	  <dl class="mt-3">
-		<dt>根本 晃輔</dt>
-		<dd>所属：大学院 システム情報工学研究科 博士後期課程</dd>
-		<dt>佐藤 大哲</dt>
-		<dd>所属：大学院 システム情報工学研究科 情報理工学位プログラム 博士前期課程</dd>
-		<dt>関口 亞聖</dt>
-		<dd>所属：大学院 システム情報工学研究科 情報理工学位プログラム 博士前期課程</dd>
-		<dt>西巻 譲</dt>
-		<dd>所属：大学院 システム情報工学研究群 情報理工学位プログラム 博士前期課程</dd>
-		<dt>太田 弘樹</dt>
-		<dd>所属：大学院 システム情報工学研究群 情報理工学位プログラム 博士前期課程</dd>
-		<dt>岸川 友樹</dt>
-		<dd>所属：大学院 システム情報工学研究群 社会工学学位プログラム 博士前期課程</dd>
-		<dt>小野村 卓也</dt>
-		<dd>所属：情報科学類</dd>
-		<dt>大本 和輝</dt>
-		<dd>所属：情報科学類</dd>
-		<dt>一木 祐介</dt>
-		<dd>所属：情報科学類</dd>
-		<dt>小川 広水</dt>
-		<dd>所属：情報科学類</dd>
-		<dt>服部 真吾</dt>
-		<dd>所属：情報メディア創成学類</dd>
-		<dt>金子 尚樹</dt>
-		<dd>所属：情報科学類 ※2023年度室長</dd>
-	  </dl>
-	</div>
+			<div class="tab-pane fade show active" id="m2025" role="tabpanel" aria-labelledby="m2025-tab">
+				<dl class="mt-3">
+					<dt>根本 晃輔</dt>
+					<dd>所属：大学院 システム情報工学研究科 コンピュータサイエンス専攻 博士後期課程</dd>
+					<dt>関口 亞聖</dt>
+					<dd>所属：大学院 システム情報工学研究科 情報理工学位プログラム 博士前期課程</dd>
+					<dt>服部 真吾</dt>
+					<dd>所属：大学院 システム情報工学研究科 情報理工学位プログラム 博士前期課程</dd>
+					<dt>北野 尚樹</dt>
+					<dd>所属：情報学群 情報科学類</dd>
+					<dt>松田 心杏</dt>
+					<dd>所属：理工学群 物理学類</dd>
+					<dt>中野 あおい</dt>
+					<dd>所属：情報学群 情報科学類</dd>
+					<dt>細島 涼雅</dt>
+					<dd>所属：情報学群 情報科学類 ※2025年室長</dd>
+					<dt>間瀬 太陽</dt>
+					<dd>所属：情報学群 情報科学類</dd>
+				</dl>
+			</div>
+			<div class="tab-pane fade show" id="m2024" role="tabpanel" aria-labelledby="m2024-tab">
+				<dl class="mt-3">
+					<dt>根本 晃輔</dt>
+					<dd>所属：大学院 システム情報工学研究科 コンピュータサイエンス専攻 博士後期課程</dd>
+					<dt>関口 亞聖</dt>
+					<dd>所属：大学院 システム情報工学研究科 情報理工学位プログラム 博士前期課程</dd>
+					<dt>太田 弘樹</dt>
+					<dd>所属：大学院 システム情報工学研究群 情報理工学位プログラム 博士前期課程</dd>
+					<dt>服部 真吾</dt>
+					<dd>所属：情報学群 情報メディア創成学類</dd>
+					<dt>北野 尚樹（旧姓：金子）</dt>
+					<dd>所属：情報学群 情報科学類 ※2024年度室長</dd>
+					<dt>松田 心杏</dt>
+					<dd>所属：理工学群 物理学類</dd>
+					<dt>中野 あおい</dt>
+					<dd>所属：情報学群 情報科学類</dd>
+					<dt>細島 涼雅</dt>
+					<dd>所属：情報学群 情報科学類</dd>
+					<dt>間瀬 太陽</dt>
+					<dd>所属：情報学群 情報科学類</dd>
+				</dl>
+			</div>
+      <div class="tab-pane fade show" id="m2023" role="tabpanel" aria-labelledby="m2023-tab">
+				<dl class="mt-3">
+				<dt>根本 晃輔</dt>
+				<dd>所属：大学院 システム情報工学研究科 博士後期課程</dd>
+				<dt>佐藤 大哲</dt>
+				<dd>所属：大学院 システム情報工学研究科 情報理工学位プログラム 博士前期課程</dd>
+				<dt>関口 亞聖</dt>
+				<dd>所属：大学院 システム情報工学研究科 情報理工学位プログラム 博士前期課程</dd>
+				<dt>西巻 譲</dt>
+				<dd>所属：大学院 システム情報工学研究群 情報理工学位プログラム 博士前期課程</dd>
+				<dt>太田 弘樹</dt>
+				<dd>所属：大学院 システム情報工学研究群 情報理工学位プログラム 博士前期課程</dd>
+				<dt>岸川 友樹</dt>
+				<dd>所属：大学院 システム情報工学研究群 社会工学学位プログラム 博士前期課程</dd>
+				<dt>小野村 卓也</dt>
+				<dd>所属：情報科学類</dd>
+				<dt>大本 和輝</dt>
+				<dd>所属：情報科学類</dd>
+				<dt>一木 祐介</dt>
+				<dd>所属：情報科学類</dd>
+				<dt>小川 広水</dt>
+				<dd>所属：情報科学類</dd>
+				<dt>服部 真吾</dt>
+				<dd>所属：情報メディア創成学類</dd>
+				<dt>金子 尚樹</dt>
+				<dd>所属：情報科学類 ※2023年度室長</dd>
+				</dl>
+			</div>
         <div class="tab-pane fade show" id="m2022" role="tabpanel" aria-labelledby="m2022-tab">
 	  <dl class="mt-3">
 	    <dt>根本 晃輔</dt>
