--- a/public_html/members.html
+++ b/public_html/members.html
@@ -97,6 +97,8 @@
 					<dd>所属：情報学群 情報科学類 ※2025年室長</dd>
 					<dt>間瀬 太陽</dt>
 					<dd>所属：情報学群 情報科学類</dd>
+					<dt>齋藤 智郎</dt>
+					<dd>所属：情報学群 情報科学類</dd>
 				</dl>
 			</div>
 			<div class="tab-pane fade show" id="m2024" role="tabpanel" aria-labelledby="m2024-tab">
